[package]
name = "wordlist"
version = "0.1.0"
authors = ["Ammon Dodson <github@adodson.e4ward.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.7"
unicode-segmentation = "1"

[dependencies.clap]
version      = "2"
default-features = false
