[package]
name    = "wordlist"
version = "0.1.1"
authors = ["Blaine Dodson <blaine.dodson@pm.me>"]
edition = "2021"
readme  = "README.md"
license = "MIT"
repository = "https://github.com/blaine-dodson/wordlist"
keywords  = ["password", "passphrase", "diceware"]
categories = ["command-line-utilities", "text-processing"]
description = "A tool for building word lists and generating passphrases from them--diceware style."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8"
unicode-segmentation = "1"
clap = { version = "3", features = ["cargo"]}
